--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-player-loader",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "description": "The official react component for the Brightcove Player",
   "main": "dist/brightcove-react-player-loader.cjs.js",
   "module": "dist/brightcove-react-player-loader.es.js",
@@ -49,6 +49,9 @@
     "prepublishOnly": "npm-run-all build test:verify"
   },
   "author": "Brightcove, Inc.",
+  "contributors": [
+    "phillipsv@github.com"
+  ],
   "license": "Apache-2.0",
   "vjsstandard": {
     "ignore": [
