--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "test/"
   ],
   "dependencies": {
-    "player-loader": "git+https://github.com/phillipsv/player-loader.git",
+    "@rsm/player-loader": "^1.7.1",
     "global": "^4.3.2"
   },
   "devDependencies": {
